--- a/_posts/2020-01-03-the-us-narrative-today.html
+++ b/_posts/2020-01-03-the-us-narrative-today.html
@@ -1397,107 +1397,108 @@ stories:
   domain: http://www.wallowa.com/chieftain/
   link: https://www.wallowa.com/news/lower-snake-river-dams-map/image_eee56e02-2db5-11ea-adba-6f8abaef3d94.html
 images:
-- name: birdhouse-birdhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-really-hot.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-satan-red.jpg
-- name: aws-s3-stories-36349148770-1a9d2692b2-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349148770-1a9d2692b2-z.jpg
-- name: white-house-lawn-white-house-window-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crafty-painting.jpg
-- name: crow-crow-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
-- name: fence-mexico-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-sand-paper.jpg
-- name: wind-mills-windmills-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-nazi-poster.jpg
-- name: windowmountain-window-mountain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-oily-mcoilface.jpg
-- name: san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-- name: hollywood-building-hollywood-building-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-smooth-ride.jpg
-- name: copper-circuit-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-public-market_36725946605_o.jpg
-- name: christianity-christianity-under-construction-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-deep-connections.jpg
-- name: udnie-IMG_8374.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8374.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-- name: containership-containership-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-wols.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
-- name: docks-docks-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-really-hot.jpg
-- name: aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-alberto-giacometti.jpg
-- name: window-window-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-pond.jpg
-- name: old-barn-old-barn-1500-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-marcel-duchamp.jpg
-- name: docks-docks-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-electricity.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-horiz-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-horiz-circuit.JPG
-- name: subway-subway-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-neo-instinct.jpg
-- name: old-gas-pumps-oldgaspumps-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-two.jpg
-- name: fence-fence-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-three.jpg
-- name: wind-mills-windmills-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-rain.jpg
-- name: udnie-IMG_7995.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7995.jpg
-- name: old-granary-field-granaryfield-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-nazi-poster.jpg
-- name: oldroad-old-road-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sand-paper.jpg
-- name: adam-smith-adam-smith-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-diego-rivera1.jpg
-- name: dragon-desert-desert-dragon-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-diego-rivera1.jpg
-- name: lincoln-memorial-lincolnmemorial-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-constitution.jpg
-- name: copper-circuit-firetruck-bright-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-firetruck-bright-sun.jpg
-- name: docks-docks-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit-2.jpg
-- name: stalin-time-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-white-house-lawn-view.jpg
-- name: san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-- name: berlinwall-DSC-0084-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purple-pond.jpg
-- name: machine-road-machine-road-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dark-rain.jpg
-- name: aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
-- name: aws-s3-square-C3JdRtDWMAUqS6L.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
-- name: la-muse-down-the-line-harlem.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-down-the-line-harlem.jpg
-- name: power-lines-power-lines-empty-space-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-gan-vogh.jpg
-- name: bluelake-dark-soul-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-soul-file-00-01-17-38.jpg
-- name: gypsymosaic-gypsy-eyes-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-plentiful.jpg
-- name: braceros-domingo-ulloa-people-eating-canal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-people-eating-canal.jpg
-- name: lincoln-memorial-lincolnmemorial-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-storm.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
+- name: la-muse-eiphel-tower-paris-brown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eiphel-tower-paris-brown.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit.jpg
+- name: old-barn-old-barn-1500-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-pablo-blue.jpg
+- name: copper-circuit-subway-underground_36599191851_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-underground_36599191851_o.jpg
+- name: old-cabin-oldcabin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crafty-painting.jpg
+- name: gypsymosaic-gypsy-eyes-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-light-dali.jpg
+- name: dragon_close-up-rain-princess.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-rain-princess.jpg
+- name: school-clouds-church-clouds-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-ww2-dresden.jpg
+- name: walled-garden-walled-garden-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crunch-paper.jpg
+- name: ellis-island-ellisisland-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crabapple.jpg
+- name: aws-s3-lighthouse-lighthouse-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-600.jpg
+- name: nazi-invasion-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-fishing-ship-in-docks.jpg
+- name: mediterranean-mediterranean-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-kandinsky-bv.jpg
+- name: old-granary-field-oldhouse-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-emily-carr.jpg
+- name: subway-subway-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
+- name: file-00-00-18-35 2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35
+    2.jpg
+- name: oldcabin-store-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-deep-connections.jpg
+- name: bluelake-blue-brush-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-01-17-38.jpg
+- name: capital-battle-capitolbattle-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-constitution.jpg
+- name: server-cloud-server-racks-clouds-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
+- name: wave-DSC_0004.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0004.jpg
+- name: stalin-time-cargo-ship_36587814601_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cargo-ship_36587814601_o.jpg
+- name: white-house-whitehouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-rainbow-festival.jpg
+- name: gypsymosaic-gypsy-eyes-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-storm.jpg
+- name: blossombar-yellow-paper-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-paper-file-00-00-00-00.jpg
+- name: gypsymosaic-gypsy-eyes-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colored-circuits.jpg
+- name: lincoln-memorial-lincolnmemorial-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-monet-one.jpg
+- name: mosaic-face-mosaic-face-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dry-skin.jpg
+- name: ellis-island-ellis-island-room-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-alberto-giacometti.jpg
+- name: powerlines-power-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-green-zuma.jpg
+- name: subway-subway-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-collage.jpg
+- name: store-on-corner-store-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
+- name: machine-road-machine-road-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-smooth-ride.jpg
+- name: adam-smith-adam-smith-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit.jpg
+- name: nazi-invasion-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-vancouver-clouds.jpg
+- name: scream-DSC_0267.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0267.jpg
+- name: old-house-oldhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-creativity.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+- name: dragon-desert-desert-dragon-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-deep-connections.jpg
+- name: death-valley-death-valley-national-park-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-mucha-mult.jpg
+- name: lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+- name: white-house-lawn-white-house-window-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-oily-mcoilface.jpg
+- name: copper-circuit-train-france-high-speed-in-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-france-high-speed-in-station.jpg
+- name: window-window-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-nazi-poster.jpg
+- name: store-on-corner-oldcabin-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-umberto-bocc.jpg
+- name: rain-princess-british-black-cab-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-british-black-cab-street.jpg
+- name: blossombar-dry-skin-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-24-99.jpg
+- name: legal-statue-legalstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dry-skin.jpg
+- name: mistywoods-babyfoot-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-graham-sutherland.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
 ---
 Elon Musk Tweets New SpaceX Flight Simulation Video.&nbsp;Congress Divided Over Airstrike Killing Iranian Official.&nbsp;Baton Rouge Could Be Key Player In Developing Disruptive Technology Platform.&nbsp;Leesburg Man Dies Following November Car Crash.&nbsp;Retired Police Dog Last Seen In Olivehurst.&nbsp;Burned House To Be Demolished.&nbsp;Hoosiers Falter Late In Gator Bowl Loss.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;
